--- a/index.html
+++ b/index.html
@@ -1,58 +1,167 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Nexus Esports</title>
+    <title>NEXUS Collective Esports</title>
+    <script>
+        if (localStorage.getItem('nxc-theme') !== 'light') {
+            document.documentElement.classList.add('dark');
+        }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        slate: {
+                            850: '#161621',
+                        }
+                    },
+                    boxShadow: {
+                        'soft': 'var(--card-shadow)',
+                    }
+                }
+            }
+        }
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <style>
+        :root {
+            --bg-color: #f1f5f9;
+            /* Slate 100 - Darker than pure white for contrast */
+            --bg-image: radial-gradient(circle at 50% 0%, rgba(126, 34, 206, 0.05) 0%, transparent 60%), radial-gradient(circle at 90% 10%, rgba(251, 191, 36, 0.08) 0%, transparent 50%);
+            --text-color: #0f172a;
+            /* Slate 900 */
+            --royalty-gold: #fbbf24;
+            --royalty-purple: #7e22ce;
+            --glass-bg: rgba(255, 255, 255, 0.7);
+            /* More transparent to show subtle gradient */
+            --glass-border: rgba(251, 191, 36, 0.25);
+            /* softer border */
+            --scrollbar-track: #f1f5f9;
+            --card-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.05);
+            /* Soft light mode shadow */
+        }
+
+        html.dark {
+            --bg-color: #020617;
+            /* Midnight Black */
+            --bg-image: none;
+            --text-color: #f8fafc;
+            --royalty-gold: #fbbf24;
+            --royalty-purple: #4c1d95;
+            --glass-bg: rgba(2, 6, 23, 0.8);
+            --glass-border: rgba(251, 191, 36, 0.15);
+            --scrollbar-track: #020617;
+            --card-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+        }
+
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #050508;
-            color: #f8fafc;
+            background-color: var(--bg-color);
+            background-image: var(--bg-image);
+            background-attachment: fixed;
+            color: var(--text-color);
             margin: 0;
             overflow-x: hidden;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
+
         .glow-mesh {
-            background-image: 
-                radial-gradient(at 0% 0%, rgba(109, 40, 217, 0.15) 0px, transparent 50%),
-                radial-gradient(at 100% 0%, rgba(59, 130, 246, 0.1) 0px, transparent 50%),
-                radial-gradient(at 50% 100%, rgba(236, 72, 153, 0.05) 0px, transparent 50%);
+            background-image:
+                radial-gradient(at 0% 0%, rgba(251, 191, 36, 0.15) 0px, transparent 50%),
+                radial-gradient(at 100% 0%, rgba(76, 29, 149, 0.2) 0px, transparent 50%),
+                radial-gradient(at 50% 100%, rgba(251, 191, 36, 0.05) 0px, transparent 50%);
+            background-attachment: fixed;
         }
+
         .glass {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.08);
+            background: var(--glass-bg);
+            backdrop-filter: blur(16px);
+            border: 1px solid var(--glass-border);
+            box-shadow: var(--card-shadow);
         }
+
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 10px;
         }
+
         ::-webkit-scrollbar-track {
-            background: #050508;
+            background: var(--scrollbar-track);
         }
+
         ::-webkit-scrollbar-thumb {
-            background: #1e293b;
-            border-radius: 4px;
+            background: linear-gradient(to bottom, #4c1d95, #fbbf24);
+            border-radius: 5px;
+            border: 2px solid var(--scrollbar-track);
         }
+
         ::-webkit-scrollbar-thumb:hover {
-            background: #334155;
+            filter: brightness(1.2);
+        }
+
+        @keyframes letter-drift {
+
+            0%,
+            100% {
+                transform: translateY(0) rotate(0deg);
+            }
+
+            33% {
+                transform: translateY(-3px) rotate(-1deg);
+            }
+
+            66% {
+                transform: translateY(2px) rotate(1.5deg);
+            }
+        }
+
+        @keyframes intense-shake {
+
+            0%,
+            100% {
+                transform: translate(0, 0) rotate(0deg);
+            }
+
+            20% {
+                transform: translate(-0.5px, -0.5px) rotate(-0.2deg);
+            }
+
+            40% {
+                transform: translate(0.5px, 0.5px) rotate(0.2deg);
+            }
+
+            60% {
+                transform: translate(-0.7px, 0.3px) rotate(-0.3deg);
+            }
+
+            80% {
+                transform: translate(0.7px, -0.3px) rotate(0.3deg);
+            }
+        }
+
+        .animate-shake {
+            display: inline-block;
+            animation: intense-shake 0.4s ease-in-out infinite;
+            will-change: transform;
+        }
+
+        .animate-letter {
+            display: inline-block;
+            animation: letter-drift 4s ease-in-out infinite;
+            will-change: transform;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
-  }
-}
-</script>
 </head>
+
 <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
