chore: prepare for deployment, add reset script, update logic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXUS Collective Esports</title>
+    <title>Waks Corporation Esports</title>
     <script>
         if (localStorage.getItem('nxc-theme') !== 'light') {
             document.documentElement.classList.add('dark');
