feat: Strategy Playbook, security hardening, and production seeding

--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
             }
         }
 
+        .custom-scrollbar-fuchsia::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .custom-scrollbar-fuchsia::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .custom-scrollbar-fuchsia::-webkit-scrollbar-thumb {
+            background: rgba(217, 70, 239, 0.3);
+            border-radius: 10px;
+        }
+
+        .custom-scrollbar-fuchsia::-webkit-scrollbar-thumb:hover {
+            background: rgba(217, 70, 239, 0.5);
+        }
+
         .animate-shake {
             display: inline-block;
             animation: intense-shake 0.4s ease-in-out infinite;
