feat: update branding and communication channels

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waks Corporation Esports</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/logo.png">
     <script>
         if (localStorage.getItem('nxc-theme') !== 'light') {
             document.documentElement.classList.add('dark');
